[gd_scene load_steps=21 format=3 uid="uid://dqblwph5s4ss5"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_2kbhf"]
[ext_resource type="Texture2D" uid="uid://dymfo5nfeu12s" path="res://assets/player/player-sheet.png" id="2_rf8t5"]
[ext_resource type="PackedScene" uid="uid://daunfutmlfpqa" path="res://scenes/weapons/shotgun.tscn" id="3_gcghw"]
[ext_resource type="Script" path="res://scripts/state_machine.gd" id="3_sj5dq"]
[ext_resource type="Script" path="res://scripts/states/player/Player_Idle_State.gd" id="4_n6nkm"]
[ext_resource type="Script" path="res://scripts/states/player/Player_Run_State.gd" id="5_qea78"]
[ext_resource type="Script" path="res://scripts/states/player/Player_Rewind_State.gd" id="6_7sytb"]
[ext_resource type="PackedScene" uid="uid://c8gpve7ervbhd" path="res://scenes/vcr.tscn" id="8_xgku6"]
[ext_resource type="PackedScene" uid="uid://odwmkap2t684" path="res://scenes/cursor.tscn" id="9_75km8"]
[ext_resource type="Script" path="res://scenes/Camera2D.gd" id="9_hpjyw"]
[ext_resource type="Script" path="res://scenes/Player UI.gd" id="11_s6yl4"]
[ext_resource type="Texture2D" uid="uid://dh5t4r3nxmb5u" path="res://assets/square.png" id="11_uahv3"]

[sub_resource type="CircleShape2D" id="CircleShape2D_p7tyh"]
radius = 4.0

[sub_resource type="Animation" id="Animation_ktonk"]
resource_name = "player_box"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0001, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [14, 18, 19, 20, 21]
}

[sub_resource type="Animation" id="Animation_kubv7"]
resource_name = "player_crouch"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [14, 15, 16, 17]
}

[sub_resource type="Animation" id="Animation_e3e6f"]
resource_name = "player_idle"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_bsdgv"]
resource_name = "player_run"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [4, 5, 6, 7, 8, 9]
}

[sub_resource type="Animation" id="Animation_2tona"]
resource_name = "player_sneak"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [10, 11, 12, 13]
}

[sub_resource type="Animation" id="Animation_irphm"]
resource_name = "player_static"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [30, 31, 32, 33]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xdojr"]
_data = {
"player_box": SubResource("Animation_ktonk"),
"player_crouch": SubResource("Animation_kubv7"),
"player_idle": SubResource("Animation_e3e6f"),
"player_run": SubResource("Animation_bsdgv"),
"player_sneak": SubResource("Animation_2tona"),
"player_static": SubResource("Animation_irphm")
}

[node name="Player" type="CharacterBody2D" groups=["Player"]]
script = ExtResource("1_2kbhf")
speed = 75.0

[node name="Sprite2D" type="Sprite2D" parent="."]
y_sort_enabled = true
texture = ExtResource("2_rf8t5")
offset = Vector2(0, -24)
hframes = 34

[node name="Weapon Holder" type="Node2D" parent="."]
position = Vector2(0, -6)

[node name="Shotgun" parent="Weapon Holder" instance=ExtResource("3_gcghw")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -6)
shape = SubResource("CircleShape2D_p7tyh")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "player_idle"
libraries = {
"": SubResource("AnimationLibrary_xdojr")
}

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("3_sj5dq")
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("4_n6nkm")

[node name="Run" type="Node" parent="StateMachine"]
script = ExtResource("5_qea78")

[node name="Rewind" type="Node" parent="StateMachine"]
script = ExtResource("6_7sytb")

[node name="VCR" parent="." instance=ExtResource("8_xgku6")]

[node name="Camera2D" type="Camera2D" parent="."]
position_smoothing_enabled = true
position_smoothing_speed = 10.0
script = ExtResource("9_hpjyw")

[node name="Cursor" parent="." instance=ExtResource("9_75km8")]

[node name="Player UI" type="CanvasLayer" parent="."]
script = ExtResource("11_s6yl4")
first_color = Color(1, 0, 0, 0.392157)
second_color = Color(1, 0, 0, 0)

[node name="Damage Overlay" type="TextureRect" parent="Player UI"]
modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("11_uahv3")

[connection signal="on_player_damaged" from="." to="." method="take_damage"]
[connection signal="on_player_damaged" from="." to="Player UI" method="_on_player_on_player_damaged"]
[connection signal="rewind_complete" from="VCR" to="." method="rewind_complete"]
